# Credenchain

./: README.md
credenchain/: .env.example  LICENSE  README.md  package-lock.json  package.json
credenchain/contracts/soroban_cert/: Cargo.toml
credenchain/contracts/soroban_cert/src/: lib.rs
credenchain/src/app/: globals.css  page.tsx
credenchain/src/app/api/certificates/: route.ts
credenchain/src/app/api/setup/: route.ts
credenchain/src/app/api/verify/[id]/: route.ts
credenchain/src/app/verify/[id]/: page.tsx
credenchain/src/components/: CertificateForm.tsx  CertificateList.tsx  WalletConnect.tsx
